--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5",
+    "react-undraw-illustrations": "^2.0.3",
     "styled-components": "^4.0.2"
   },
   "scripts": {
